[FIX] Back to 'mutable' product image list